--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<title>Yougheeta Kumari · Portfolio v2</title>
+<!-- Last updated: 2025-09-29 -->
 <html lang="en">
 <head>
   <meta charset="utf-8">
