--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
       <div class="card">
         <h1 class="hero">Hi, I’m Yougheeta.</h1>
         <p class="lede">
-          Data analyst focused on practical insights: dashboards (Power BI, Tableau), SQL/Python/R,
-          and end-to-end data workflows (ETL, automation, QA). Comfortable with Snowflake/Redshift/BigQuery,
-          APIs, and CI/CD. I like clear logic, clean visuals, and results you can act on tomorrow.
+          I transform complex data into actionable insights. 
+          Specializing in predictive analytics, dashboard development, and research methodologies that drive business decisions.
         </p>
       </div>
     </section>
