--- a/index.html
+++ b/index.html
@@ -12,30 +12,68 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <header class="site-header">
-    <nav class="nav">
-      <a class="brand" href="#top">ykumari</a>
-      <div class="links">
-        <a href="#about">About</a>
-        <a href="#experience">Experience</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-      </div>
-    </nav>
-  </header>
+ <!-- NAV -->
+<header class="site-header glass">
+  <nav class="nav">
+    <a class="brand" href="#top">Yougheeta Kumari</a>
+    <div class="links">
+      <a href="#projects">Projects</a>
+      <a href="#skills">Skills</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+      <a class="btn ghost" href="./Yougheeta-Kumari-Resume.pdf" target="_blank" rel="noopener">⬇ Resume</a>
+    </div>
+  </nav>
+</header>
 
-  <main id="top" class="container">
-    <!-- ABOUT -->
-    <section id="about" class="section">
-      <h2 class="kicker">ABOUT</h2>
-      <div class="card">
-        <h1 class="hero">Hi, I’m Yougheeta.</h1>
-        <p class="lede">
-          I transform complex data into actionable insights. 
-          Specializing in predictive analytics, dashboard development, and research methodologies that drive business decisions.
-        </p>
+<!-- HERO -->
+<section id="home" class="hero-wrap">
+  <div class="hero">
+    <div class="hero-left">
+      <p class="eyebrow">DATA ANALYST & MS BUSINESS ANALYTICS STUDENT</p>
+      <h1 class="display">
+        Hey There,<br>
+        I'm <span class="accent">Yougheeta</span>
+      </h1>
+      <p class="sublead">
+        I turn complex data into clear decisions. Predictive analytics, dashboard development,
+        and research methods that support business outcomes.
+      </p>
+
+      <div class="cta-row">
+        <a class="btn primary" href="#projects">View Projects →</a>
+        <a class="btn" href="./Yougheeta-Kumari-Resume.pdf" target="_blank" rel="noopener">⬇ Download Resume</a>
       </div>
-    </section>
+
+      <div class="metrics">
+        <div class="kpi">
+          <div class="num">10K+</div>
+          <div class="lbl">Records Analyzed</div>
+        </div>
+        <div class="kpi">
+          <div class="num">15+</div>
+          <div class="lbl">Projects Completed</div>
+        </div>
+        <div class="kpi">
+          <div class="num">$50K+</div>
+          <div class="lbl">Grants Supported</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero-right">
+      <div class="photo-ring">
+        <img src="assets/profile.jpg" alt="Yougheeta portrait">
+      </div>
+
+      <div class="tagcard">
+        <div class="tag-title">MS</div>
+        <div class="tag-sub">Business Analytics</div>
+        <div class="tag-meta">Dec 2025</div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- EXPERIENCE -->
     <section id="experience" class="section">
