--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
   </div>
 </section>
 
+  <section id="about" class="section about-wrap">
+  <div class="about-metrics">
+    <div><div class="big">6+</div><div>Programming Languages</div></div>
+    <div><div class="big">12+</div><div>Analytics Tools</div></div>
+    <div><div class="big">3</div><div>Years Experience</div></div>
+    <div><div class="big">100+</div><div>Datasets Analyzed</div></div>
+  </div>
+
+  <div class="about-grid">
+    <div>
+      <p class="kicker">ABOUT ME</p>
+      <h2>Turning Data Into <span class="accent">Impact</span></h2>
+      <p>I’m a data analyst pursuing my MS in Business Analytics at the University of Hartford, focused on transforming complex data into strategic business insights.</p>
+      <p>Currently at Upper Albany Main Street, I lead initiatives that leverage data to drive community development and economic growth, across financial modeling, predictive analytics, qualitative research, and dashboard development.</p>
+      <p><a class="btn primary" href="#contact">Let’s Work Together →</a></p>
+    </div>
+
+    <div class="about-cards">
+      <div class="a-card"><div class="a-head">🎓 MS Business Analytics</div><div class="a-sub">University of Hartford</div><div class="a-meta">Expected December 2025</div></div>
+      <div class="a-card"><div class="a-head">💼 Current Role</div><div class="a-sub">Data Analyst at UAMS</div><div class="a-meta">Leading data-driven initiatives</div></div>
+      <div class="a-card"><div class="a-head">👥 Team Leadership</div><div class="a-sub">Data Management Team Lead</div><div class="a-meta">Cross-functional projects</div></div>
+      <div class="a-card"><div class="a-head">🔬 Research Focus</div><div class="a-sub">Economic & Social Impact</div><div class="a-meta">Inequality and diversity studies</div></div>
+    </div>
+  </div>
+</section>
+
+
     <!-- EXPERIENCE -->
     <section id="experience" class="section">
       <h2 class="kicker">EXPERIENCE</h2>
@@ -94,54 +121,178 @@
       </article>
     </section>
 
-    <!-- PROJECTS -->
-    <section id="projects" class="section">
-      <h2 class="kicker">PROJECTS</h2>
+    <section id="projects" class="section projects-wrap">
+  <p class="kicker">FEATURED WORK</p>
+  <h2 class="center-title">Transforming Data Into <span class="accent">Insights</span></h2>
+  <p class="center-sub">From financial analysis to social research, explore how I use data science and analytics to solve complex business problems.</p>
 
-      <div class="grid">
-        <a class="card project" href="#" target="_blank" rel="noopener">
-          <h4>Analytics & ML: Gender & Economic Inequality</h4>
-          <p>Predictive modeling (R/Python), data dictionary, results write-up.</p>
-        </a>
-        <a class="card project" href="#" target="_blank" rel="noopener">
-          <h4>Analytics & ML: Abbott Financial Analysis</h4>
-          <p>Power BI dashboards, KPI logic, and visuals.</p>
-        </a>
-        <a class="card project" href="#" target="_blank" rel="noopener">
-          <h4>Research: Workplace Inclusivity</h4>
-          <p>NVivo coded themes, anonymized excerpts, and findings slides.</p>
-        </a>
-        <a class="card project" href="#" target="_blank" rel="noopener">
-          <h4>Visualization: Power BI Gallery</h4>
-          <p>Selected visuals and walkthroughs.</p>
-        </a>
+  <div class="cards-2col">
+    <!-- Card 1 -->
+    <article class="p-card">
+      <div class="p-card-top">
+        <div class="pill icon">🔎</div>
+        <div class="pill">Research Analytics</div>
       </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact" class="section">
-      <h2 class="kicker">CONTACT</h2>
-      <div class="card">
-        <p>
-          Resume:
-          <a href="./Yougheeta-Kumari-Resume.docx">Download</a>
-          &nbsp;·&nbsp;
-          LinkedIn:
-          <a href="https://www.linkedin.com/in/yougheetakumari" target="_blank" rel="noopener">
-            linkedin.com/in/yougheetakumari
-          </a>
-          &nbsp;·&nbsp;
-          GitHub:
-          <a href="https://github.com/ykumari" target="_blank" rel="noopener">@ykumari</a>
-        </p>
+      <h3 class="p-title">Gender & Economic Inequality Analysis</h3>
+      <p class="p-text">Comprehensive analysis of gender inequality trends using World Bank datasets, revealing key patterns across 180+ countries.</p>
+      <div class="p-tags">
+        <span>Python</span><span>R</span><span>World Bank API</span><span>Pandas</span><span>Matplotlib</span>
       </div>
-    </section>
+      <div class="p-meta">Impact: <a href="#" target="_blank">180+ countries analyzed</a></div>
+    </article>
 
-    <footer class="footer">
-      <p>© <span id="year"></span> Yougheeta Kumari</p>
-    </footer>
-  </main>
+    <!-- Card 2 -->
+    <article class="p-card">
+      <div class="p-card-top">
+        <div class="pill icon">💲</div>
+        <div class="pill">Business Intelligence</div>
+      </div>
+      <h3 class="p-title">Abbott Financial Performance Dashboard</h3>
+      <p class="p-text">Interactive Power BI dashboard analyzing financial metrics, KPIs, and market performance trends.</p>
+      <div class="p-tags">
+        <span>Power BI</span><span>DAX</span><span>SQL</span><span>Excel</span><span>Financial Modeling</span>
+      </div>
+      <div class="p-meta">Impact: <a href="#" target="_blank">$2.1B revenue analyzed</a></div>
+    </article>
 
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-</body>
-</html>
+    <!-- Card 3 -->
+    <article class="p-card">
+      <div class="p-card-top">
+        <div class="pill icon">📊</div>
+        <div class="pill">Qualitative Research</div>
+      </div>
+      <h3 class="p-title">Workplace Diversity Research</h3>
+      <p class="p-text">NVivo analysis of diversity initiatives and their impact on organizational culture.</p>
+      <div class="p-tags">
+        <span>NVivo</span><span>Qualitative Analysis</span><span>Survey Design</span><span>Statistical Testing</span>
+      </div>
+      <div class="p-meta">Impact: <a href="#" target="_blank">500+ survey responses</a></div>
+    </article>
+
+    <!-- Card 4 -->
+    <article class="p-card">
+      <div class="p-card-top">
+        <div class="pill icon">📈</div>
+        <div class="pill">Statistical Analysis</div>
+      </div>
+      <h3 class="p-title">Digital vs Traditional Menu Analysis</h3>
+      <p class="p-text">SPSS analysis comparing customer preferences and business outcomes across menu formats.</p>
+      <div class="p-tags">
+        <span>SPSS</span><span>Regression</span><span>T-tests</span><span>ANOVA</span><span>Survey Research</span>
+      </div>
+      <div class="p-meta">Impact: <a href="#" target="_blank">15% conversion improvement</a></div>
+    </article>
+  </div>
+
+  <div class="center-actions">
+    <a class="btn primary" href="#projects">View All Projects →</a>
+  </div>
+</section>
+  <section id="skills" class="section skills-wrap">
+  <p class="kicker">TECHNICAL EXPERTISE</p>
+  <h2 class="center-title">Skills <span class="accent">&amp; Tools</span></h2>
+  <p class="center-sub">A toolkit for turning raw data into business insight.</p>
+
+  <div class="skill-group">
+    <h3>Programming & Development</h3>
+    <div class="skill-grid">
+      <div class="s-card"><div class="s-head">Python</div><div class="bar"><span style="width:90%"></span></div><div class="s-note">90% proficiency</div></div>
+      <div class="s-card"><div class="s-head">R</div><div class="bar"><span style="width:80%"></span></div><div class="s-note">80%</div></div>
+      <div class="s-card"><div class="s-head">SQL</div><div class="bar"><span style="width:88%"></span></div><div class="s-note">88%</div></div>
+    </div>
+  </div>
+
+  <div class="skill-group">
+    <h3>Data Visualization & BI</h3>
+    <div class="skill-grid">
+      <div class="s-card"><div class="s-head">Power BI</div><div class="bar"><span style="width:92%"></span></div><div class="s-note">92%</div></div>
+      <div class="s-card"><div class="s-head">Tableau</div><div class="bar"><span style="width:80%"></span></div><div class="s-note">80%</div></div>
+      <div class="s-card"><div class="s-head">Excel</div><div class="bar"><span style="width:95%"></span></div><div class="s-note">95%</div></div>
+    </div>
+  </div>
+
+  <div class="skill-group">
+    <h3>Analytics & Research</h3>
+    <div class="skill-grid">
+      <div class="s-card"><div class="s-head">SPSS</div><div class="bar"><span style="width:87%"></span></div><div class="s-note">87%</div></div>
+      <div class="s-card"><div class="s-head">NVivo</div><div class="bar"><span style="width:83%"></span></div><div class="s-note">83%</div></div>
+      <div class="s-card"><div class="s-head">Machine Learning</div><div class="bar"><span style="width:78%"></span></div><div class="s-note">78%</div></div>
+    </div>
+  </div>
+
+  <div class="skill-group">
+    <h3>Enterprise & Finance</h3>
+    <div class="skill-grid">
+      <div class="s-card"><div class="s-head">SAP</div><div class="bar"><span style="width:88%"></span></div><div class="s-note">88%</div></div>
+      <div class="s-card"><div class="s-head">Financial Modeling</div><div class="bar"><span style="width:86%"></span></div><div class="s-note">86%</div></div>
+    </div>
+  </div>
+</section>
+
+
+   <section id="contact" class="section contact-wrap">
+  <p class="kicker">GET IN TOUCH</p>
+  <h2 class="center-title">Let’s Work <span class="accent">Together</span></h2>
+  <p class="center-sub">Ready to turn your data into insights? Reach out about your next analytics or research project.</p>
+
+  <div class="contact-grid">
+    <!-- Form (static) -->
+    <form class="c-card" onsubmit="return false;">
+      <h3>Send a Message</h3>
+      <label>Full Name<input type="text" placeholder="Your full name"></label>
+      <label>Email Address<input type="email" placeholder="your.email@example.com"></label>
+      <label>Project Type
+        <select>
+          <option>Select project type...</option>
+          <option>Dashboard / BI</option>
+          <option>Predictive Modeling</option>
+          <option>Statistical Analysis</option>
+          <option>Qualitative Research</option>
+        </select>
+      </label>
+      <label>Message<textarea rows="5" placeholder="Tell me about your project, timeline, and how I can help..."></textarea></label>
+      <button class="btn primary" type="submit">Send Message</button>
+    </form>
+
+    <!-- Sidebar -->
+    <div class="contact-side">
+      <div class="c-card">
+        <h3>Quick Actions</h3>
+        <a class="q-link" href="#projects">View Portfolio</a>
+        <a class="q-link" href="./Yougheeta-Kumari-Resume.pdf" target="_blank">Download Resume</a>
+        <a class="q-link" href="mailto:yougheeta.kumari@example.com">Email Me</a>
+      </div>
+
+      <div class="c-card">
+        <h3>Contact Information</h3>
+        <p><strong>Email:</strong> yougheeta.kumari@example.com</p>
+        <p><strong>LinkedIn:</strong> <a target="_blank" href="https://linkedin.com/in/yougheetakumari">linkedin.com/in/yougheetakumari</a></p>
+        <p><strong>Location:</strong> Hartford, Connecticut</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+   <footer class="footer">
+  <div class="footer-grid">
+    <div>
+      <div class="f-brand">Yougheeta Kumari</div>
+      <p>Data Analyst & MS Business Analytics student focused on actionable insights.</p>
+    </div>
+    <div>
+      <div class="f-head">Quick Links</div>
+      <a href="#projects">Projects</a><br>
+      <a href="#skills">Skills</a><br>
+      <a href="#about">About</a><br>
+      <a href="#contact">Contact</a>
+    </div>
+    <div>
+      <div class="f-head">Get In Touch</div>
+      <p><a href="mailto:yougheeta.kumari@example.com">yougheeta.kumari@example.com</a><br>Hartford, Connecticut</p>
+      <a class="btn primary" href="#contact">Start a Project</a>
+    </div>
+  </div>
+  <div class="f-bottom">© <span id="year"></span> Yougheeta Kumari</div>
+</footer>
+<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
